Bug 114801 - EDITOR DOCX Cannot use the highlight 'bucket' function with docx file
Summary: EDITOR DOCX Cannot use the highlight 'bucket' function with docx file
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.7.2 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.4
Keywords: bibisected, filter:docx, regression
Depends on:
Blocks: DOCX-Lists-Direct-Formatting
  Show dependency treegraph
 
Reported: 2018-01-02 13:12 UTC by Gabor Kelemen (Collabora)
Modified: 2019-04-18 10:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-01-02 13:12:55 UTC
1, Open attachment #138799 [details] in LO
2, Try to select a highlight color in the Formatting toolbar, and push down the Highlight button so that you get the bucket icon to paint the text with the new highlight color.
3, Highlighting the numbered paragraphs this way does not work, only in case of the paragraph with Text body style. 
You need to select the text first, then click the Highlight icon to change the color.

4, The same process does work with an ODT file such as attachment #138800 [details]
Comment 1 Buovjaga 2018-01-27 18:58:50 UTC
Repro with file.

Works in 3.6

Arch Linux 64-bit
Version: 6.1.0.0.alpha0+
Build ID: 2d8f17565ebe867210f5769851d91b2e7b612a8f
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on January 27th 2018

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 2 Telesto 2018-01-28 14:44:14 UTC
Repro with
Version: 4.3.7.2
Build ID: 8a35821d8636a03b8bf4e15b48f59794652c68ba

but not with
Versie: 4.1.0.4 
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28
Comment 3 raal 2018-06-05 17:11:11 UTC
Zolnai, can it be your commit 8b949134441056a1455d67ddfdd7e0bc5f2ee682 ?


There are only 'skip'ped commits left to test.
The first bad commit could be any of: a0def938e83af362e350d0de0c60c603100086aa
        commit 51576d102f77e74b842b85eb8226019b3ea1fcdc
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Sun Sep 29 15:37:12 2013 +0200
    Commit:     Gerrit Code Review <gerrit@gerrit.libreoffice.org>
    CommitDate: Sun Sep 29 13:38:32 2013 +0000
    
        Updated core
        Project: help  cc089237993994a0a3ce91112eb45693f9a2993d
 fbc4624516b5d9bfef21af3989ae7422b94e80f6
            source-hash-2ee4a04d61de32003d1895ac157ae97db7dd36c8
    
    commit 2ee4a04d61de32003d1895ac157ae97db7dd36c8
    Author:     Takeshi Abe <tabe@fixedpoint.jp>
    AuthorDate: Sun Sep 29 21:22:42 2013 +0900
    Commit:     Takeshi Abe <tabe@fixedpoint.jp>
    CommitDate: Sun Sep 29 22:34:40 2013 +0900
    
        Mark as const / static
    
        Change-Id: Ib88b9e5533e56bb8b0b05c4e668299b033f17ffb
 4cc87877519e2365a581d67236e2e97c8afb8584
            commit 33ad001fe6c19fed72129b24b3dd85d8eff05baf
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Sun Sep 29 14:42:38 2013 +0200
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Sun Sep 29 14:49:43 2013 +0200
    
        Convert connpooloptions to .ui + adapt code.
 66f10529a96b6c183a149b8a55bfd84105b656ed
            commit b35c511b833b75bee576c15dd842b0446634b8e1
    Author:     Andras Timar <andras.timar@collabora.com>
    AuthorDate: Sun Sep 29 09:39:22 2013 -0700
    Commit:     Andras Timar <andras.timar@collabora.com>
    CommitDate: Sun Sep 29 09:47:06 2013 -0700
    
        I forgot to add -d swith to signtool
    
        The UAC prompt shows a temporary random Program Name for msi, if the
        -d switch is not given.
    
        One more change: probably it is not wise to print the password of
        code signing key in clear text to log and to screen.
 150d1dc1e0db52b035738fa9f679eb6b1c1fe275
            commit e4168dabd27af2d34db43a100b8cddcf18d68870
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Sun Sep 29 12:25:13 2013 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Sun Sep 29 20:26:05 2013 +0200
    
        don't use SAL_WARN to log calls
 4305a49d4ae26c09d325c90097db4638407cf2e0
            commit b84c89bb2ab5c2ac8e4bf2efff9db2d6cf26c401
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Sun Sep 29 12:14:58 2013 +0200
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Sun Sep 29 14:49:43 2013 +0200
    
        Convert dbregister to .ui + adapt code.
 d57741771bcbcd88e2d9b498cca55f8fcf1c534c
            commit 0c377feb71d34cc2c0596249f6910dcb2b0d2e30
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Sun Sep 29 13:29:23 2013 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Sun Sep 29 20:26:05 2013 +0200
    
        no need for this temporary object
 fa2acd9723a72b48669c6d714bcee4a70f84eb84
            commit ffe69acb222f1b4773a6fad20429ee1bc44fd985
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Sun Sep 29 10:49:07 2013 +0200
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Sun Sep 29 14:49:43 2013 +0200
    
        Kill internationaloptions page, it has been unused for years. 5e42490b5179b8d8f65d6c8efbd543d2054db0d5
            commit ed25f39a72e02a5f30652f9ad55fcfe5551c3026
    Author:     Jan Holesovsky <kendy@collabora.com>
    AuthorDate: Sun Sep 29 09:15:47 2013 +0200
    Commit:     Jan Holesovsky <kendy@collabora.com>
    CommitDate: Sun Sep 29 14:49:42 2013 +0200
    
        Convert optfltr page to .ui + adapt code.
 97c46aebc96898ce82ffc1b4946eeb58dd22ae45
    commit 383622a30da5cd5128e0b775eb4f75f40a1d4426
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Sun Sep 29 13:29:35 2013 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Sun Sep 29 20:26:05 2013 +0200
    
        show chart context menu entries again
 215a8ed72b9037f85ca5047c96f3f2dc51cc230f
            commit 8b949134441056a1455d67ddfdd7e0bc5f2ee682
    Author:     Zolnai Tamás <zolnaitamas2000@gmail.com>
    AuthorDate: Sun Sep 29 10:24:53 2013 +0200
    Commit:     Zolnai Tamás <zolnaitamas2000@gmail.com>
    CommitDate: Sun Sep 29 11:27:34 2013 +0200
    
        fdo#65403, fdo#65404 DOCX export/import of character highlight
    
        Steps
        -Add a new character attribute (RES_CHRATR_HIGHLIGHT)
        -Get this character attribute via SwFont class just like
        background
        -If has highlight, then paint that, otherwise paint background
        -Extend UNO API
        -Implement DOCX export and import filter
        Note: By now character highlight can't be set via UI.
        It's a next step to add a highlight option. f69f4685cd361b88eaa84f74bd35c0eee2edbc26
            commit e880a88834e2a34163ece6eb4ca62d8244d6155c
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Sun Sep 29 16:27:58 2013 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Sun Sep 29 20:26:06 2013 +0200
    
        fix undefined behavior with out-of-bounds substring access
 0b9c848e428a78d948949db8ac96682cf40fa5f7
            commit 00669d59762347d1ccdc34be0fa15cf8444715ef
    Author:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    AuthorDate: Sun Sep 29 18:27:20 2013 +0200
    Commit:     Markus Mohrhard <markus.mohrhard@googlemail.com>
    CommitDate: Sun Sep 29 20:26:06 2013 +0200
    
        replace some auto_ptr with boost::scoped_ptr in chart2

We cannot bisect more!
Comment 4 Tamás Zolnai 2019-04-06 11:36:09 UTC
My commit in this list was reverted some times later and was reworked even later, so I doubt that this commit causes the issue in recent versions.
Comment 5 Tamás Zolnai 2019-04-06 11:40:24 UTC
(In reply to Tamás Zolnai from comment #4)
> My commit in this list was reverted some times later and was reworked even
> later, so I doubt that this commit causes the issue in recent versions.

However it might be related to the changes of handling MSO shading / MSO highlighting:
https://cgit.freedesktop.org/libreoffice/core/log/?qt=grep&q=Char+highlight%3A
Comment 6 Commit Notification 2019-04-06 20:02:15 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/84d4125b28c384f9ac6285737a5bb9093978798e%5E%21

tdf#114801: Cannot use the highlight 'bucket' function with docx file

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2019-04-09 09:43:40 UTC
Issue verified in

Version: 6.3.0.0.alpha0+
Build ID: 040a54d89e8ca33171e86647ced8dc58efd85fbe
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Tamás Zolnai, thanks for fixing this issue!!
Comment 8 Xisco Faulí 2019-04-09 09:44:39 UTC
Cherry-picked to 6-2 branch since this is a regression -> https://gerrit.libreoffice.org/#/c/70454/
Comment 9 Commit Notification 2019-04-18 10:29:36 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/bb1e671f2ef54e36102bb3299b44582f46752b4a%5E%21

tdf#114801: Cannot use the highlight 'bucket' function with docx file

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.