tdf#114801: Cannot use the highlight 'bucket' function with docx file

Change-Id: I00df0022a20e83d76484d7c6e7b903ecd3c54aa0
Reviewed-on: https://gerrit.libreoffice.org/70347
Tested-by: Jenkins
Reviewed-by: Tamás Zolnai <tamas.zolnai@collabora.com>
(cherry picked from commit 84d4125b28c384f9ac6285737a5bb9093978798e)